<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/margin_film_list">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_picture_film_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name_film_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/error_film_not_found"
                android:layout_margin="@dimen/marginX8"/>
            <TextView
                android:id="@+id/tv_director_film_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/error_director_not_found"
                android:layout_margin="@dimen/marginX8"
                />
            <TextView
                android:id="@+id/tv_price_film_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/error_price_not_found"
                android:layout_margin="@dimen/marginX8"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/bt_add_favourite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/bt_add_to_favourites"/>

                <Button
                    android:id="@+id/bt_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/bt_see_details"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>